# generative-agent-ai-basics-to-advanced

./: README.md  requirements.txt
Agent_From_Scratch/: ReACt_Agent_From_Scratch_In_Python.ipynb
Agentic AI With Langgraph And MCP/: .gitignore  pyproject.toml  requirements.txt
Agentic AI With Langgraph And MCP/BasicChatbot/: chatbot.ipynb
Agentic AI With Langgraph And MCP/Debugging/: agent.py  debugging.ipynb
Agentic AI With Langgraph And MCP/Debugging/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
Agentic AI With Langgraph And MCP/HumanAssistance/: humanintheloop.ipynb
Agentic AI With Langgraph And MCP/MCPSERVER/: client.py  mathserver.py  weather.py
Pre-requist_for_langgraph/: Agent_practice.ipynb  Agents_Tools_From _Scratch.ipynb  Pre_requist_Assistant_RAG_LCEL.ipynb
agent_based_rag/: agentic_rag.ipynb  corrective_rag.ipynb  self_rag.ipynb
chatbot_with_langgraph/: chatbot.ipynb
data/: data.txt
different_structure_pattern/: React_agent_with_langgraph.ipynb  human_in_loop.ipynb  structure_output_agent.ipynb
lagchain-end-end/: ConversationEntityMemory.ipynb  Conversational_Summary_Memory.ipynb  Langchain_memory_classes.ipynb  chatbot_using_langchain_with_memory.ipynb
langchain-components/: RAG_with_Conversation.ipynb  demo_langgraph.ipynb  langchain_essential.ipynb
